--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   },
   "homepage": "https://github.com/alfredogaliza/fenestra#readme",
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "fontawesome": "^5.6.3",
-    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4"
+  },
+  "peerDependencies": {    
+    "bootstrap": "^4",
+    "fontawesome": "^5"
   }
 }
