--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "fenestra",
   "version": "1.0.1",
   "description": "Uma API de janelas baseada em react/redux",
-  "main": "index.js",
+  "main": "build/js/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --watch",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -30,5 +32,16 @@
   "peerDependencies": {
     "bootstrap": "^4",
     "fontawesome": "^5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6"
   }
 }
