--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fenestra",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Uma API de janelas baseada em react/redux",
-  "main": "src/index.js",
+  "main": "dist/js/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --watch",
