--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fenestra",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "Uma API de janelas baseada em react/redux",
   "main": "dist/index.js",
   "scripts": {
@@ -27,7 +27,10 @@
     "url": "https://github.com/alfredogaliza/fenestra/issues"
   },
   "homepage": "https://github.com/alfredogaliza/fenestra#readme",
-  "dependencies": {},
+  "dependencies": {
+    "load-styles": "^2.0.0",
+    "postcss": "^7.0.17"
+  },
   "peerDependencies": {
     "bootstrap": "^4",
     "fontawesome": "^5",
@@ -41,15 +44,13 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.1.0",
-    "file-loader": "^4.1.0",
+    "babel": "^6.23.0",
+    "babel-generator": "^6.26.1",
+    "babel-plugin-inline-import-data-uri": "^1.0.1",
+    "babel-plugin-transform-import-styles": "0.0.11",
+    "babel-template": "^6.26.0",
     "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.10",
     "react-redux": "^7.1.0",
-    "redux": "^4.0.4",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6"
+    "redux": "^4.0.4"
   }
 }
