--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "fenestra",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Uma API de janelas baseada em react/redux",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch",
-    "build": "webpack",
-    "prepublishOnly": "babel ./src --out-dir ./dist -s inline"
+    "build": "babel ./src --out-dir ./dist -s inline",
+    "publishOnly": "babel ./src --out-dir ./dist -s inline"
   },
   "repository": {
     "type": "git",
