--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "fenestra",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Uma API de janelas baseada em react/redux",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel ./src --out-dir ./dist -s inline",
+    "build": "babel ./src --out-dir ./dist -s inline || exit 0",
     "publishOnly": "babel ./src --out-dir ./dist -s inline"
   },
   "repository": {
