--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fenestra",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Uma API de janelas baseada em react/redux",
   "main": "dist/index.js",
   "scripts": {
@@ -48,7 +48,9 @@
     "babel-plugin-inline-import-data-uri": "^1.0.1",
     "babel-plugin-transform-import-styles": "0.0.11",
     "babel-template": "^6.26.0",
+    "browser-env": "^3.2.6",
     "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4"
   }
