--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fenestra",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Uma API de janelas baseada em react/redux",
   "main": "dist/index.js",
   "scripts": {
@@ -32,7 +32,7 @@
   },
   "peerDependencies": {
     "bootstrap": "^4",
-    "fontawesome": "^5",
+    "font-awesome": "^5",
     "react": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4"
@@ -50,7 +50,6 @@
     "babel-template": "^6.26.0",
     "browser-env": "^3.2.6",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4"
   }
