--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fenestra",
-  "version": "1.1.11",
+  "version": "1.2.0",
   "description": "Uma API de janelas baseada em react/redux",
   "main": "dist/index.js",
   "scripts": {
@@ -53,6 +53,7 @@
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "postcss": "^7.0.17",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
