--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fenestra",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Uma API de janelas baseada em react/redux",
   "main": "build/index.js",
   "scripts": {
@@ -48,6 +48,11 @@
     "babel-plugin-transform-import-styles": "0.0.11",
     "babel-template": "^6.26.0",
     "bootstrap": "^4.3.1",
+    "esdoc": "^1.1.0",
+    "esdoc-ecmascript-proposal-plugin": "^1.0.0",
+    "esdoc-jsx-plugin": "^1.0.0",
+    "esdoc-react-plugin": "^1.0.1",
+    "esdoc-standard-plugin": "^1.0.0",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.12.0",
     "postcss": "^7.0.17",
