Padronização do webpack; compatibilidade como safari

--- a/package.json
+++ b/package.json
@@ -1,67 +1,76 @@
 {
-  "name": "fenestra",
-  "version": "1.9.0",
-  "description": "Uma API de janelas baseada em react/redux",
-  "main": "build/js/index.js",
-  "scripts": {
-    "start": "npm run build && webpack-dev-server --inline --hot",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass src/styles/scss -o src/styles/css",
-    "transpile": "npm run scss && npm run postcss && babel src --out-dir build/js",
-    "postcss": "postcss src/styles/css/*.css -u precss -u autoprefixer -d build/css/",
-    "docs": "jsdoc src/* -d docs",
-    "build": "npm run transpile && webpack --mode production"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alfredogaliza/fenestra.git"
-  },
-  "keywords": [
-    "windows",
-    "api",
-    "react",
-    "redux",
-    "bootstrap",
-    "font-awesome"
-  ],
-  "author": "Luiz Alfredo Galiza",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/alfredogaliza/fenestra/issues"
-  },
-  "homepage": "https://github.com/alfredogaliza/fenestra#readme",
-  "dependencies": {},
-  "peerDependencies": {
-    "font-awesome": "^4.7.0",
-    "react": "^16.8.6"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.6.1",
-    "babel-generator": "^6.26.1",
-    "babel-plugin-transform-import-styles": "0.0.11",
-    "babel-template": "^6.26.0",
-    "bootstrap": "^4.3.1",
-    "esdoc": "^1.1.0",
-    "esdoc-ecmascript-proposal-plugin": "^1.0.0",
-    "esdoc-jsx-plugin": "^1.0.0",
-    "esdoc-react-plugin": "^1.0.1",
-    "esdoc-standard-plugin": "^1.0.0",
-    "font-awesome": "^4.7.0",
-    "node-sass": "^4.12.0",
-    "postcss": "^7.0.17",
-    "postcss-cli": "^6.1.3",
-    "precss": "^4.0.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.4",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.8.0"
-  }
+    "name": "fenestra",
+    "version": "1.9.0",
+    "description": "Uma API de janelas baseada em react/redux",
+    "main": "build/js/index.js",
+    "scripts": {
+        "start": "npm run test",
+        "test": "webpack-dev-server -p --inline --hot --config webpack.config.testing.js",
+        "docs": "jsdoc src/* -d docs",
+        "build": "babel src --out-dir build/js && webpack --config webpack.config.production.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/alfredogaliza/fenestra.git"
+    },
+    "keywords": [
+        "windows",
+        "desktop",
+        "api",
+        "react",
+        "redux",
+        "font-awesome"
+    ],
+    "author": "Luiz Alfredo Galiza",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/alfredogaliza/fenestra/issues"
+    },
+    "homepage": "https://github.com/alfredogaliza/fenestra#readme",
+    "dependencies": {
+        "prop-types": "^15.7.2",
+        "react-redux": "^7.1.0",
+        "redux": "^4.0.4"
+    },
+    "peerDependencies": {
+        "font-awesome": "^4.7.0",
+        "react-dom": "^16.9.0",
+        "react": "^16.8.6"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.5.5",
+        "@babel/core": "^7.5.5",
+        "@babel/plugin-proposal-class-properties": "^7.5.5",
+        "@babel/preset-env": "^7.5.5",
+        "@babel/preset-react": "^7.0.0",
+        "autoprefixer": "^9.6.1",
+        "babel-generator": "^6.26.1",
+        "babel-loader": "^8.0.6",
+        "babel-template": "^6.26.0",
+        "css-loader": "^3.2.0",
+        "esdoc": "^1.1.0",
+        "esdoc-ecmascript-proposal-plugin": "^1.0.0",
+        "esdoc-jsx-plugin": "^1.0.0",
+        "esdoc-react-plugin": "^1.0.1",
+        "esdoc-standard-plugin": "^1.0.0",
+        "fibers": "^4.0.1",
+        "font-awesome": "^4.7.0",
+        "html-webpack-plugin": "^3.2.0",
+        "ignore-emit-webpack-plugin": "^2.0.2",
+        "jsdoc": "^3.6.3",
+        "mini-css-extract-plugin": "^0.8.0",
+        "node-sass": "^4.12.0",
+        "postcss": "^7.0.17",
+        "postcss-cli": "^6.1.3",
+        "postcss-loader": "^3.0.0",
+        "postcss-scss": "^2.0.0",
+        "precss": "^4.0.0",
+        "react": "^16.8.6",
+        "react-dom": "^16.9.0",
+        "sass": "^1.22.10",
+        "sass-loader": "^8.0.0",
+        "webpack": "^4.0.0",
+        "webpack-cli": "^3.3.6",
+        "webpack-dev-server": "^3.8.0"
+    }
 }
